Fixed some scaling issues with the header. Visibility of slider indicators. Margins between text areas.

--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,21 @@ body {
 }
 
 #contact-header #logo {
-	max-height: 75px;
+	padding: 0;
 }
 
-#contact-header button {
+#contact-header #logo img {
+	max-width: 100%;
+}
+
+#contact-header #contact-button {
+	padding: 0;
 	position: absolute;
 	bottom: 0;
 	right: 15px;
+}
+
+#contact-header #contact-button button {
 	box-shadow: 3px 3px 10px rgba(0,0,0,0.5);
 	background-color: #3e3e40;
 	border-color: #404040;
@@ -54,11 +62,15 @@ body {
 }
 
 .carousel-indicators {
-	bottom: -30px;
+	bottom: -35px;
+}
+
+.carousel-indicators li {
+	border: 1px solid #a0a0a0;
 }
 
 .carousel-indicators .active {
-	background-color: rgba(256,256,256,0.5);
+	background-color: rgba(128,128,128,0.5);
 }
 
 /*Info*/
@@ -67,6 +79,7 @@ body {
 }
 
 .info-content {
+	margin-bottom: 15px;
 	padding: 15px 0;
 	border-radius: 7px;
 	box-shadow: 3px 3px 10px rgba(0,0,0,0.50);
@@ -156,7 +169,29 @@ border-color: #7ec97f;
 border-color: #dd9a98;
 }
 
-/*Custom Media Queries*/
+/*Bootstrap Based Media Queries*/
+@media(max-width:991px){
+	#contact-header #logo {
+		text-align: center;
+	}
+
+	#contact-header #logo img {
+		float: none !important;
+	}
+
+	#contact-header #contact-button {
+		margin-top: 20px;
+		position: relative;
+		right: 0;
+		text-align: center;
+	}
+
+	#contact-header #contact-button button {
+		float: none !important;
+	}
+}
+
+/*Custom Media Queries
 @media(max-width:1024px){
 	
 }
@@ -183,4 +218,4 @@ border-color: #dd9a98;
 
 @media(min-width:1200px){
 
-}
+}*/
